--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <h1>Contato</h1>
-    <form action="https://formsubmit.co/fabianejustino03@gmail.com" method="post">
+    <form action="https://formsubmit.co/eduardo912duhduh@gmail.com" method="post">
         <input type="text" name="name" placeholder="Digite seu nome aqui" required>
         <input type="email" name="email" placeholder="Digite seu email aqui" required>
 
